WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218838
REGRESSION(
r267411
): Unable to "Start Element Selection" with Web Inspector closed
https://bugs.webkit.org/show_bug.cgi?id=218838
Summary
REGRESSION(r267411): Unable to "Start Element Selection" with Web Inspector c...
Blaze Burg
Reported
2020-11-11 19:38:13 PST
<
rdar://problem/71158215
>
Attachments
Patch
(3.31 KB, patch)
2020-11-11 19:41 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch (better ChangeLog)
(3.49 KB, patch)
2020-11-11 19:44 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2020-11-11 19:41:37 PST
Created
attachment 413901
[details]
Patch This is a partial revert of
r276411
.
Blaze Burg
Comment 2
2020-11-11 19:44:45 PST
Created
attachment 413902
[details]
Patch (better ChangeLog)
Devin Rousso
Comment 3
2020-11-11 22:26:09 PST
Comment on
attachment 413902
[details]
Patch (better ChangeLog) rs=me
EWS
Comment 4
2020-11-11 22:30:34 PST
Committed
r269718
: <
https://trac.webkit.org/changeset/269718
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413902
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug